fix flicker bug

--- a/app/globals.css
+++ b/app/globals.css
@@ -108,3 +108,7 @@ body {
 .cursor p {
   margin: 0;
 }
+
+.animated-item{
+  opacity: 0;
+}
